--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Ryan Wire",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.6.8"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
