--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL=mongodb://127.0.0.1:27017/bookAPI
-DATABASE_URL_TEST=mongodb://127.0.0.1:27017/bookAPI_Test
+MONGODB_URI=mongodb://127.0.0.1:27017/bookAPI
+MONGODB_URI_TEST=mongodb://127.0.0.1:27017/bookAPI_Test
+PORT=8000
